@@ -70,13 +70,13 @@ repositories {
 }
 
 dependencies {
-    compileOnly("io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT")
-    compileOnly("dev.jorel:commandapi-annotations:9.7.0")
-    implementation("com.github.walker84837:JResult:1.1.0")
-    testImplementation("io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT")
+    annotationProcessor("dev.jorel:commandapi-annotations:10.0.1")
+    compileOnly("dev.jorel:commandapi-annotations:10.0.1")
+    compileOnly("io.papermc.paper:paper-api:1.21.5-R0.1-SNAPSHOT")
+    implementation("com.github.walker84837:JResult:1.2.0")
+    testImplementation("io.papermc.paper:paper-api:1.21.5-R0.1-SNAPSHOT")
     testImplementation("org.junit.jupiter:junit-jupiter:5.12.2")
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher:1.12.1")
-    annotationProcessor("dev.jorel:commandapi-annotations:9.7.0")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher:1.12.2")
 }
 
 tasks.test {
@@ -116,6 +116,10 @@ tasks.register("printProjectName") {
     doLast {
         println(rootProject.name)
     }
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
 }
 
 tasks.register("release") {
